--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -30,11 +30,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote to file \"WeylScal4NRPy/src/WeylScal4NRPy.h\"\n"
-     ]
+     "data": {
+      "text/plain": [
+       "111225"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -45,6 +48,7 @@
     "from outputC import *\n",
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
+    "import loop\n",
     "\n",
     "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
     "weyl.WeylScalars_Cartesian()\n",
@@ -57,6 +61,24 @@
     "# par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
     "scalars_to_print = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r_rhs),\\\n",
     "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=weyl.psi4i_rhs)]\n",
+    "\n",
+    "get_position_pointers = \"\\tconst CCTK_REAL xx0 = x[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                       \\n\\tconst CCTK_REAL xx1 = y[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                       \\n\\tconst CCTK_REAL xx2 = z[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "\\n\"\n",
+    "\n",
+    "get_psi_pointers = \"\\tconst double psi4r = psi4rGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi4i = psi4iGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi3r = psi3rGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi3i = psi3iGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi2r = psi2rGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi2i = psi2iGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi1r = psi1rGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi1i = psi1iGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi0r = psi0rGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "                  \\n\\tconst double psi0i = psi0iGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\\n",
+    "\\n\"\n",
+    "\n",
     "if output_scalars is \"all_psis\" or \"all_psis_and_invariants\":\n",
     "    scalars_to_print = scalars_to_print + [\\\n",
     "                                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r_rhs),\\\n",
@@ -70,17 +92,27 @@
     "                                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0r\"),rhs=weyl.psi0r_rhs),\\\n",
     "                                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0i\"),rhs=weyl.psi0i_rhs),]\n",
     "    if output_scalars is \"all_psis_and_invariants\":\n",
-    "        scalars_to_print = scalars_to_print + [\\\n",
-    "                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIr\"),rhs=weyl.curvIr_rhs),\\\n",
-    "                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIi\"),rhs=weyl.curvIi_rhs),\\\n",
-    "                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJr\"),rhs=weyl.curvJr_rhs),\\\n",
-    "                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJi\"),rhs=weyl.curvJr_rhs),\\\n",
-    "                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ1\"),rhs=weyl.curvJ1_rhs),\\\n",
-    "                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ2\"),rhs=weyl.curvJ2_rhs),\\\n",
-    "                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ3\"),rhs=weyl.curvJ3_rhs),\\\n",
-    "                                               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ4\"),rhs=weyl.curvJ4_rhs),]\n",
+    "#        scalars_to_print = scalars_to_print + [\\\n",
+    "        invars_to_print = [\\\n",
+    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIr\"),rhs=weyl.curvIr_rhs),\\\n",
+    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIi\"),rhs=weyl.curvIi_rhs),\\\n",
+    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJr\"),rhs=weyl.curvJr_rhs),\\\n",
+    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJi\"),rhs=weyl.curvJi_rhs),\\\n",
+    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ1\"),rhs=weyl.curvJ1_rhs),\\\n",
+    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ2\"),rhs=weyl.curvJ2_rhs),\\\n",
+    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ3\"),rhs=weyl.curvJ3_rhs),\\\n",
+    "                           lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ4\"),rhs=weyl.curvJ4_rhs),]\n",
+    "        invars = fin.FD_outputC(\"returnstring\",invars_to_print)\n",
+    "        invars_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
+    "                                  [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",get_psi_pointers+invars)\n",
+    "        file = open(\"WeylScal4NRPy/src/WeylScal4NRPy_invars.h\", \"w\")\n",
+    "        file.write(str(invars_looped))\n",
     "\n",
-    "fin.FD_outputC(\"WeylScal4NRPy/src/WeylScal4NRPy.h\",scalars_to_print)"
+    "psis = fin.FD_outputC(\"returnstring\",scalars_to_print)\n",
+    "psis_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
+    "                        [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",get_position_pointers+psis)\n",
+    "file = open(\"WeylScal4NRPy/src/WeylScal4NRPy_psis.h\", \"w\")\n",
+    "file.write(str(psis_looped))\n"
    ]
   },
   {
@@ -158,14 +190,12 @@
     "} 1\n",
     "\n",
     "private:\n",
-    "CCTK_BOOLEAN output_all_psis \"Whether to output all Weyl scalars or just psi4\" \n",
-    "{\n",
-    "} true\n",
-    "\n",
-    "private:\n",
-    "CCTK_BOOLEAN output_invars \"Whether or not to output the invariant scalars\" \n",
-    "{\n",
-    "} true"
+    "CCTK_KEYWORD output_scalars \"Whether to output all Weyl scalars, just psi4, or all scalars and invariants\" \n",
+    "{  \n",
+    "  \"psi4_only\" :: \"\"\n",
+    "  \"all_psis\" :: \"\"\n",
+    "  \"all_psis_and_invariants\" :: \"\"\n",
+    "} \"psi4_only\"\n"
    ]
   },
   {
@@ -192,11 +222,11 @@
     "%%writefile WeylScal4NRPy/schedule.ccl\n",
     "\n",
     "STORAGE: NRPyPsi4_group[timelevels]\n",
-    "if (CCTK_EQUALS(output_all_psis, true))\n",
+    "if (CCTK_EQUALS(output_scalars, \"all_psis_and_invariants\") || CCTK_EQUALS(output_scalars, \"all_psis\"))\n",
     "{\n",
     " STORAGE: NRPyPsi3210_group[timelevels]\n",
     "}\n",
-    "if (CCTK_EQUALS(output_invars, true))\n",
+    "if (CCTK_EQUALS(output_scalars, \"all_psis_and_invariants\"))\n",
     "{\n",
     " STORAGE: NRPyInvars_group[timelevels]\n",
     "}\n",
