--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -33,24 +33,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[gridfunction(gftype='AUX', name='psi4r'), gridfunction(gftype='AUX', name='psi4i'), gridfunction(gftype='AUX', name='psi3r'), gridfunction(gftype='AUX', name='psi3i'), gridfunction(gftype='AUX', name='psi2r'), gridfunction(gftype='AUX', name='psi2i'), gridfunction(gftype='AUX', name='psi1r'), gridfunction(gftype='AUX', name='psi1i'), gridfunction(gftype='AUX', name='psi0r'), gridfunction(gftype='AUX', name='psi0i'), gridfunction(gftype='AUX', name='curvIr'), gridfunction(gftype='AUX', name='curvIi'), gridfunction(gftype='AUX', name='curvJr'), gridfunction(gftype='AUX', name='curvJi'), gridfunction(gftype='AUX', name='curvJ1'), gridfunction(gftype='AUX', name='curvJ2'), gridfunction(gftype='AUX', name='curvJ3'), gridfunction(gftype='AUX', name='curvJ4')]\n",
-      "Error: Tried to register the gridfunction \"psi4r\" twice (ignored type)\n",
-      "\n",
-      "\n"
+      "[gridfunction(gftype='EVOL', name='gammaDD00'), gridfunction(gftype='EVOL', name='gammaDD01'), gridfunction(gftype='EVOL', name='gammaDD02'), gridfunction(gftype='EVOL', name='gammaDD11'), gridfunction(gftype='EVOL', name='gammaDD12'), gridfunction(gftype='EVOL', name='gammaDD22'), gridfunction(gftype='EVOL', name='kDD00'), gridfunction(gftype='EVOL', name='kDD01'), gridfunction(gftype='EVOL', name='kDD02'), gridfunction(gftype='EVOL', name='kDD11'), gridfunction(gftype='EVOL', name='kDD12'), gridfunction(gftype='EVOL', name='kDD22'), gridfunction(gftype='AUX', name='psi4r'), gridfunction(gftype='AUX', name='psi4i'), gridfunction(gftype='AUX', name='psi3r'), gridfunction(gftype='AUX', name='psi3i'), gridfunction(gftype='AUX', name='psi2r'), gridfunction(gftype='AUX', name='psi2i'), gridfunction(gftype='AUX', name='psi1r'), gridfunction(gftype='AUX', name='psi1i'), gridfunction(gftype='AUX', name='psi0r'), gridfunction(gftype='AUX', name='psi0i'), gridfunction(gftype='AUX', name='x'), gridfunction(gftype='AUX', name='y'), gridfunction(gftype='AUX', name='z')]\n",
+      "[gridfunction(gftype='AUX', name='psi4r'), gridfunction(gftype='AUX', name='psi4i'), gridfunction(gftype='AUX', name='psi3r'), gridfunction(gftype='AUX', name='psi3i'), gridfunction(gftype='AUX', name='psi2r'), gridfunction(gftype='AUX', name='psi2i'), gridfunction(gftype='AUX', name='psi1r'), gridfunction(gftype='AUX', name='psi1i'), gridfunction(gftype='AUX', name='psi0r'), gridfunction(gftype='AUX', name='psi0i'), gridfunction(gftype='AUX', name='curvIr'), gridfunction(gftype='AUX', name='curvIi'), gridfunction(gftype='AUX', name='curvJr'), gridfunction(gftype='AUX', name='curvJi'), gridfunction(gftype='AUX', name='curvJ1'), gridfunction(gftype='AUX', name='curvJ2'), gridfunction(gftype='AUX', name='curvJ3'), gridfunction(gftype='AUX', name='curvJ4')]\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'exit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-7fe607e1646b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWeylScal4NRPy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWeylScalars_Cartesian\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mweyl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mpar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_parval_from_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"output_scalars\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"all_psis\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mweyl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWeylScalars_Cartesian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglb_gridfcs_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup/nrpytutorial/WeylScal4NRPy/WeylScalars_Cartesian.py\u001b[0m in \u001b[0;36mWeylScalars_Cartesian\u001b[0;34m()\u001b[0m\n\u001b[1;32m     59\u001b[0m                                                                                                     \u001b[0;34m\"psi2r\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"psi2i\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m                                                                                                     \u001b[0;34m\"psi1r\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"psi1i\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m                                                                                                     \"psi0r\",\"psi0i\"])\n\u001b[0m\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;31m# Step 2a: Set spatial dimension (must be 3 for BSSN)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/jup/nrpytutorial/grid.py\u001b[0m in \u001b[0;36mregister_gridfunctions\u001b[0;34m(gf_type, gf_names)\u001b[0m\n\u001b[1;32m    109\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mgf_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mglb_gridfcs_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error: Tried to register the gridfunction \\\"\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mgf_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\\" twice (ignored type)\\n\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 111\u001b[0;31m                 \u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    112\u001b[0m         \u001b[0;31m# If no duplicate found, append to \"gridfunctions\" list:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m         \u001b[0mglb_gridfcs_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglb_gridfc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgf_type\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgf_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'exit' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "10434"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -134,6 +129,121 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing WeylScal4NRPy/src/WeylScal4NRPy.c\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile WeylScal4NRPy/src/WeylScal4NRPy.c\n",
+    "\n",
+    "#include <math.h>\n",
+    "#include <stdio.h>\n",
+    "#include <stdlib.h>\n",
+    "#include <string.h>\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "\n",
+    "void calc_psis(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "\t       const CCTK_REAL *x,const CCTK_REAL *y,const CCTK_REAL *z,\n",
+    "\t       const CCTK_REAL invdx0,const CCTK_REAL invdx1,const CCTK_REAL invdx2,\n",
+    "\t       const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "\t       const CCTK_REAL     *kDD00GF,const CCTK_REAL     *kDD01GF,const CCTK_REAL     *kDD02GF,const CCTK_REAL     *kDD11GF,const CCTK_REAL     *kDD12GF,const CCTK_REAL     *kDD22GF,\n",
+    "\t       CCTK_REAL *psi4rGF,CCTK_REAL *psi4iGF,\n",
+    "\t       CCTK_REAL *psi3rGF,CCTK_REAL *psi3iGF,\n",
+    "\t       CCTK_REAL *psi2rGF,CCTK_REAL *psi2iGF,\n",
+    "\t       CCTK_REAL *psi1rGF,CCTK_REAL *psi1iGF,\n",
+    "\t       CCTK_REAL *psi0rGF,CCTK_REAL *psi0iGF)  {\n",
+    "\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "#include \"WeylScal4NRPy_psis.h\"\n",
+    "\n",
+    "/*#pragma omp parallel for\n",
+    "  //  for(int i2=cctk_nghostzones[2];i2<cctk_lsh[2]-cctk_nghostzones[2];i2++) {\n",
+    "  //  for(int i1=cctk_nghostzones[1];i1<cctk_lsh[1]-cctk_nghostzones[1];i1++) {\n",
+    "  //   for(int i0=cctk_nghostzones[0];i0<cctk_lsh[0]-cctk_nghostzones[0];i0++) {\n",
+    "  for(int i2=2;i2<cctk_lsh[2]-2;i2++) {\n",
+    "    for(int i1=2;i1<cctk_lsh[1]-2;i1++) {\n",
+    "      for(int i0=2;i0<cctk_lsh[0]-2;i0++) {\n",
+    "\tconst CCTK_REAL xx0 = x[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "\tconst CCTK_REAL xx1 = y[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "\tconst CCTK_REAL xx2 = z[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\n",
+    "#include \"WeylScal4NRPy_psis.h\"\n",
+    "      }\n",
+    "    }\n",
+    "  }*/\n",
+    "}\n",
+    "\n",
+    "void calc_invars(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "\t         const CCTK_REAL *psi4rGF,const CCTK_REAL *psi4iGF,\n",
+    "\t         const CCTK_REAL *psi3rGF,const CCTK_REAL *psi3iGF,\n",
+    "\t         const CCTK_REAL *psi2rGF,const CCTK_REAL *psi2iGF,\n",
+    "\t         const CCTK_REAL *psi1rGF,const CCTK_REAL *psi1iGF,\n",
+    "\t         const CCTK_REAL *psi0rGF,const CCTK_REAL *psi0iGF,\n",
+    "\t\t CCTK_REAL *curvIrGF,CCTK_REAL *curvIiGF,\n",
+    "\t\t CCTK_REAL *curvJrGF,CCTK_REAL *curvJiGF,\n",
+    "\t\t CCTK_REAL *curvJ1GF,CCTK_REAL *curvJ2GF,\n",
+    "\t\t CCTK_REAL *curvJ3GF,CCTK_REAL *curvJ4GF)  {\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "#include \"WeylScal4NRPy_invars.h\"\n",
+    "}\n",
+    "\n",
+    "extern void weylscal4_mainfunction(CCTK_ARGUMENTS) {\n",
+    "\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "\n",
+    "  if(cctk_iteration % WeylScal4NRPy_calc_every != 0) { return; }\n",
+    "  \n",
+    "  const CCTK_REAL invdx0 = 1.0 / (CCTK_DELTA_SPACE(0));\n",
+    "  const CCTK_REAL invdx1 = 1.0 / (CCTK_DELTA_SPACE(1));\n",
+    "  const CCTK_REAL invdx2 = 1.0 / (CCTK_DELTA_SPACE(2));\n",
+    "\n",
+    "  /* Now, to calculate psi4: */\n",
+    "  calc_psis(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "\t    x,y,z,\n",
+    "\t    invdx0,invdx1,invdx2,\n",
+    "\t    gxx,gxy,gxz,gyy,gyz,gzz,\n",
+    "\t    kxx,kxy,kxz,kyy,kyz,kzz,\n",
+    "\t    psi4r,psi4i,\n",
+    "\t    psi3r,psi3i,\n",
+    "\t    psi2r,psi2i,\n",
+    "\t    psi1r,psi1i,\n",
+    "\t    psi0r,psi0i);\n",
+    "\n",
+    "  if (CCTK_EQUALS(output_scalars, \"all_psis_and_invariants\")) {\n",
+    "    calc_invars(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "      \t        psi4r,psi4i,\n",
+    "\t        psi3r,psi3i,\n",
+    "\t        psi2r,psi2i,\n",
+    "\t        psi1r,psi1i,\n",
+    "                psi0r,psi0i,\n",
+    "                NRPycurvIr,NRPycurvIi,\n",
+    "\t        NRPycurvJr,NRPycurvJi,\n",
+    "\t        NRPycurvJ1,NRPycurvJ2,\n",
+    "                NRPycurvJ3,NRPycurvJ4);\n",
+    "\t\t}\n",
+    "\n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -146,9 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting WeylScal4NRPy/interface.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/interface.ccl\n",
     "\n",
@@ -184,9 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting WeylScal4NRPy/param.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/param.ccl\n",
     "\n",
@@ -220,9 +346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting WeylScal4NRPy/schedule.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/schedule.ccl\n",
     "\n",
@@ -282,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,9 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting WeylScal4NRPy/src/make.code.defn\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/src/make.code.defn\n",
     "\n",
